<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, TimeTrackerActivity!</string>
    <string name="app_name">TimeTracker</string>
    <string name="elapsed_time_format">%1$d:%2$02d:%3$02d:%4$03d</string>
    <string name="finish">Finish</string>
    <string name="finished">Finished</string>
    <string name="edit">Edit</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="clear_all">Clear All</string>
    <string name="confirm_clear_all_title">Are you sure?</string>
    <string name="confirm_clear_all_message">If you clear all tasks, you will not be able to restore them.</string>
    <string name="running_timer_notification_title">Timer Running</string>
    <string name="running_timer_notification_message">Current time: %1$s</string>
    <string name="date_select">Monday Dec 2nd, 2011</string>
    <string name="task_name">Task Name</string>
    <string name="project_name">Project Name</string>
    <string name="description">Description</string>
    <string name="delete">Delete</string>
    <string name="new_task">Start New Task</string>
    <string name="sample_task_name">Task Name</string>
    <string name="sample_time">00:00</string>
    <string name="previous_tasks">Previous Tasks</string>
    <string name="sample_human_readable_time">3hr 42mins</string>
    <string name="edit_date">Date:</string>

</resources>